--- a/config.yml
+++ b/config.yml
@@ -202,7 +202,7 @@ presets:
             Response:
             
 # =============================================================================
-    - name: "Meeting retelling only [RUS]"
+    - name: "Scientific blog video - retelling only [RUS]"
       cli_alias: "ru-scientific-blog-retelling"
       prompts: 
         - name: "Краткое изложение"
@@ -219,7 +219,7 @@ presets:
     - name: "Scientific meeting - detailed summary [RUS]"
       cli_alias: "ru-scientific-meeting-detailed-summary"
       prompts: 
-        - name: "Изложение"
+        - name: "Краткое изложение"
           text_before: |+
             System Prompt: Ниже приведен фрагмент длинной расшифровки научной видеоконференции на русском языке. Подготовь очень детальное, точное и исчерпывающее изложение этой части расшифровки, не делая предположений и не добавляя никакой новой информации. Не используй вступительных предложений, заголовков или концовок, не упоминай ничего о том, как текст расшифровки был обработан. Проследи за тем, чтобы структура изложения была естественной, избегай повторяющихся структур предложений или скучных вступлений, таких как «Обсуждаются следующие события...». Оформи свое изложение в виде абзацев Markdown, чтобы оно легко вписалось в финальный объединенный текст.
             
@@ -250,8 +250,42 @@ presets:
             Response:
             
 # =============================================================================
+    - name: "Scientific blog - detailed summary [RUS]"
+      cli_alias: "ru-scientific-blog-detailed-summary"
+      prompts: 
+        - name: "Краткое изложение"
+          text_before: |+
+            System Prompt: Ниже приведен фрагмент длинной расшифровки видео из научного видеоблога на русском языке. Подготовь детальное, точное и исчерпывающее изложение этой части расшифровки, не делая предположений и не добавляя никакой новой информации. Не используй вступительных предложений, заголовков или концовок, не упоминай ничего о том, как текст расшифровки был обработан. Проследи за тем, чтобы структура изложения была естественной, избегай повторяющихся структур предложений или скучных вступлений, таких как «Ведущий объясняет...». Оформи свое изложение в виде абзацев Markdown, чтобы оно легко вписалось в финальный объединенный текст.
+            
+            Transcript fragment:
+            
+          text_after: |+
+            
+            Response: 
+            
+        - name: "Ключевые точки"
+          text_before: |+
+            System Prompt: Ниже приведен фрагмент длинной расшифровки видео из научного видеоблога на русском языке. Составь подробный список из 2-3 ключевых точек для этой части обсуждения, если таковые имеются. Не делай никаких предположений и ничего не добавляй никакой новой информации. Не используй никаких вступительных предложений, заголовков в начале или концовок в конце списка ключевых точек. Подготовь список для того, чтобы он легко вписался в более крупный окончательный список ключевых точек для всей видеоконференции. Оформи свой список в виде ненумерованного списка Markdown.
+            
+            Transcript fragment:
+            
+          text_after: |+
+            
+            Response:
+            
+        - name: "Обзор"
+          text_before: |+
+            System Prompt: Ниже приведен фрагмент длинной расшифровки видео из научного видеоблога  на русском языке. Составь последовательный и подробный план этой части обсуждения. Обрати внимание на ключевые идеи, аргументы, числовые данные и вспомогательные детали, но не делай предположений и не добавляй никакой новой информации. Не используй никаких вступительных предложений, заголовков в начале или концовок в конце плана. Подготовь план для того, чтобы он легко вписался в более крупный окончательный план для всей видеоконференции. Оформи свой план в виде ненумерованного списка Markdown.
+            
+            Transcript fragment:
+            
+          text_after: |+
+            
+            Response:
+            
+# =============================================================================
 
-# [OPTIONAL] Whisper.cpp control section, requires only to recognize speech from video
+# [OPTIONAL] Whisper.cpp control section, required only to recognize speech from video
 whisper:
     executable:
         Windows: "C:\\Users\\andrey.vukolov\\src\\whisper.cpp\\whisper-cli.exe"
